# python-brasil-2020-tutorial-sistema-recomendacoes

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  nginx.conf
ecommerce/: .gemspec  Gemfile  _config.yml  customers.html  error.html  index.html  products.html
ecommerce/_data/: customers.json  products.json
ecommerce/_includes/: analytics.html  footer.html  header.html  product_item.html  recomendations.html  recommendations.html  scripts.html  stylesheet.html
ecommerce/_layouts/: default.html  product.html
ecommerce/assets/js/: js.cookie.min.js  main.js
recommendations/: Makefile  pyproject.toml
recommendations/recommendations/: config.py  controller.py  dao_mongo.py  recommendations.openapi  serializer.py  server.py
