[tool.poetry]
name = "recommendations"
version = "0.1.0"
description = "Api de Recomendações"
authors = ["Cesar Augusto <cesarabruschetta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.0"
connexion = {extras = ['aiohttp', 'swagger-ui'], version = '==2.4.0'}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
